<resources>
    <string name="app_name">NSoft</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="image_desc">desc</string>

    <string name="title_activity_maps">Map</string>

    <string name="staff_list">Staff list</string>
    <string name="my_profile">My profile</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="system_options">System options</string>
    <string name="clear_cache">Clear cache</string>

    <string name="send_email">SEND EMAIL</string>
    <string name="set_notification">SET NOTIFICATION</string>
    <string name="show_on_map">SHOW ON MAP</string>

    <string name="choose_language">Choose language</string>
    <string name="save_changes">SAVE CHANGES</string>

    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_dob">Please select date of birth</string>
    <string name="photo">Photo</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>

    <string name="removed_from_favorite">Removed from Favorite</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="already_added_to_favorite">Already Added to Favorite</string>

    <string name="choose_theme">Choose theme</string>
    <string name="choose_font_size">Choose font size</string>

    <string name="network_not_available">Network is unavailable</string>
</resources>
